--- a/_modules/xformers/components/attention/scaled_dot_product.html
+++ b/_modules/xformers/components/attention/scaled_dot_product.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.attention.scaled_dot_product | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.attention.scaled_dot_product | xFormers 0.0.22 documentation</title>
   
   <script src="../../../../_static/js/ga.js"></script>
   <script src="../../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/attention/scaled_dot_product.html" />
   
-  <meta property="og:title" content="xformers.components.attention.scaled_dot_product | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.attention.scaled_dot_product | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -141,10 +141,6 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../components/index.html">API Reference</a></li>
 </ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../../factory/index.html">Factory</a></li>
-</ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../tutorials/index.html">Tutorials</a></li>
@@ -257,7 +253,7 @@
 
 <div class="viewcode-block" id="ScaledDotProduct"><a class="viewcode-back" href="../../../../components/attentions.html#xformers.components.attention.ScaledDotProduct">[docs]</a><span class="nd">@register_attention</span><span class="p">(</span><span class="s2">&quot;scaled_dot_product&quot;</span><span class="p">,</span> <span class="n">ScaledDotProductConfig</span><span class="p">)</span>
 <span class="k">class</span> <span class="nc">ScaledDotProduct</span><span class="p">(</span><span class="n">Attention</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    Implementing the Scaled Dot-Product attention proposed in</span>
 <span class="sd">    `Attention is all you need`_, Vaswani et al.</span>
 
@@ -299,7 +295,7 @@
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">:</span>
-        <span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        att_mask    A 2D or 3D mask which ignores attention at certain positions.</span>
 
 <span class="sd">                    - If the mask is boolean, a value of True will keep the value,</span>
@@ -324,8 +320,9 @@
             <span class="p">)</span>
 
         <span class="c1"># Handle a possibly deferred causal mask handling</span>
+        <span class="n">mask</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span>
         <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">causal</span> <span class="ow">and</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span> <span class="ow">is</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">mask</span> <span class="o">=</span> <span class="n">AttentionMask</span><span class="o">.</span><span class="n">make_causal</span><span class="p">(</span>
+            <span class="n">mask</span> <span class="o">=</span> <span class="n">AttentionMask</span><span class="o">.</span><span class="n">make_causal</span><span class="p">(</span>
                 <span class="n">seq_len</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">],</span>
                 <span class="n">to_seq_len</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">],</span>
                 <span class="n">device</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">device</span><span class="p">,</span>
@@ -333,10 +330,10 @@
             <span class="p">)</span>
 
         <span class="c1"># Merge the optional causal mask and the user-provided mask</span>
-        <span class="k">if</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
-            <span class="bp">self</span><span class="o">.</span><span class="n">mask</span> <span class="o">=</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span><span class="o">.</span><span class="n">to</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">dtype</span><span class="p">,</span> <span class="n">device</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">device</span><span class="p">)</span>
+        <span class="k">if</span> <span class="n">mask</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span><span class="p">:</span>
+            <span class="n">mask</span> <span class="o">=</span> <span class="n">mask</span><span class="o">.</span><span class="n">to</span><span class="p">(</span><span class="n">dtype</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">dtype</span><span class="p">,</span> <span class="n">device</span><span class="o">=</span><span class="n">q</span><span class="o">.</span><span class="n">device</span><span class="p">)</span>
 
-            <span class="n">att_mask</span> <span class="o">=</span> <span class="n">att_mask</span> <span class="o">+</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span> <span class="k">if</span> <span class="n">att_mask</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="bp">self</span><span class="o">.</span><span class="n">mask</span>
+            <span class="n">att_mask</span> <span class="o">=</span> <span class="n">att_mask</span> <span class="o">+</span> <span class="n">mask</span> <span class="k">if</span> <span class="n">att_mask</span> <span class="ow">is</span> <span class="ow">not</span> <span class="kc">None</span> <span class="k">else</span> <span class="n">mask</span>
 
         <span class="c1"># Try to handle a case where the sequence is smaller than the mask</span>
         <span class="k">if</span> <span class="p">(</span>
