--- a/_modules/xformers/components/attention.html
+++ b/_modules/xformers/components/attention.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.attention | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.attention | xFormers 0.0.22 documentation</title>
   
   <script src="../../../_static/js/ga.js"></script>
   <script src="../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/attention.html" />
   
-  <meta property="og:title" content="xformers.components.attention | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.attention | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -141,10 +141,6 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../components/index.html">API Reference</a></li>
 </ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../factory/index.html">Factory</a></li>
-</ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../tutorials/index.html">Tutorials</a></li>
@@ -259,7 +255,7 @@
 
 
 <div class="viewcode-block" id="build_attention"><a class="viewcode-back" href="../../../components/attentions.html#xformers.components.attention.build_attention">[docs]</a><span class="k">def</span> <span class="nf">build_attention</span><span class="p">(</span><span class="n">config</span><span class="p">:</span> <span class="n">Union</span><span class="p">[</span><span class="n">Dict</span><span class="p">[</span><span class="nb">str</span><span class="p">,</span> <span class="n">Any</span><span class="p">],</span> <span class="n">AttentionConfig</span><span class="p">]):</span>
-    <span class="sd">&quot;&quot;&quot;Builds an attention from a config.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Builds an attention from a config.</span>
 
 <span class="sd">    This assumes a &#39;name&#39; key in the config which is used to determine what</span>
 <span class="sd">    attention class to instantiate. For instance, a config `{&quot;name&quot;: &quot;my_attention&quot;,</span>
