--- a/_modules/xformers/components/attention/base.html
+++ b/_modules/xformers/components/attention/base.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.attention.base | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.attention.base | xFormers 0.0.22 documentation</title>
   
   <script src="../../../../_static/js/ga.js"></script>
   <script src="../../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/attention/base.html" />
   
-  <meta property="og:title" content="xformers.components.attention.base | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.attention.base | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -141,10 +141,6 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../components/index.html">API Reference</a></li>
 </ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../../factory/index.html">Factory</a></li>
-</ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../tutorials/index.html">Tutorials</a></li>
@@ -243,7 +239,7 @@
 
 <span class="nd">@dataclass</span>
 <span class="k">class</span> <span class="nc">AttentionConfig</span><span class="p">:</span>
-    <span class="sd">&quot;&quot;&quot;Parameters required for all Attentions.</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;Parameters required for all Attentions.</span>
 <span class="sd">    Can accept and store extra parameters.</span>
 <span class="sd">    &quot;&quot;&quot;</span>
 
@@ -256,7 +252,7 @@
 
 <span class="c1"># Define the common interface, every attention block needs to derive from it</span>
 <div class="viewcode-block" id="Attention"><a class="viewcode-back" href="../../../../components/attentions.html#xformers.components.attention.Attention">[docs]</a><span class="k">class</span> <span class="nc">Attention</span><span class="p">(</span><span class="n">nn</span><span class="o">.</span><span class="n">Module</span><span class="p">,</span> <span class="n">metaclass</span><span class="o">=</span><span class="n">ABCMeta</span><span class="p">):</span>
-    <span class="sa">r</span><span class="sd">&quot;&quot;&quot;The base Attention mechanism, which is typically a sub-part of the multi-head attention&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sa">r</span><span class="sd">&quot;&quot;&quot;The base Attention mechanism, which is typically a sub-part of the multi-head attention&quot;&quot;&quot;</span>
 
     <span class="n">_causal_mask</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">AttentionMask</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span>
 
@@ -305,7 +301,7 @@
 
     <span class="nd">@staticmethod</span>
     <span class="k">def</span> <span class="nf">_maybe_pad_sequence</span><span class="p">(</span><span class="n">x</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">,</span> <span class="n">mask</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        If the sequence is shorter than the mask, return a padded view</span>
 <span class="sd">        &quot;&quot;&quot;</span>
         <span class="k">if</span> <span class="n">x</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="o">-</span><span class="mi">2</span><span class="p">]</span> <span class="o">!=</span> <span class="n">mask</span><span class="o">.</span><span class="n">shape</span><span class="p">[</span><span class="o">-</span><span class="mi">1</span><span class="p">]:</span>
