--- a/_modules/xformers/components/attention/ortho.html
+++ b/_modules/xformers/components/attention/ortho.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.attention.ortho | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.attention.ortho | xFormers 0.0.22 documentation</title>
   
   <script src="../../../../_static/js/ga.js"></script>
   <script src="../../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/attention/ortho.html" />
   
-  <meta property="og:title" content="xformers.components.attention.ortho | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.attention.ortho | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -140,10 +140,6 @@
 <p class="caption" role="heading"><span class="caption-text">Components Documentation</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../components/index.html">API Reference</a></li>
-</ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../../factory/index.html">Factory</a></li>
 </ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
@@ -264,7 +260,7 @@
 
 <span class="nd">@dataclass</span>
 <span class="k">class</span> <span class="nc">OrthoformerAttentionConfig</span><span class="p">(</span><span class="n">AttentionConfig</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    num_landmarks           Number of landmarks to use for softmax approximation.</span>
 <span class="sd">    subsample_fraction      Percentage of q_samples matrix to sample per iteration</span>
 <span class="sd">    landmark_selection      Landmark selection strategy</span>
@@ -286,7 +282,7 @@
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Orthoformer_ attention mechanism.</span>
 <span class="sd">        ::</span>
 
@@ -362,7 +358,7 @@
         <span class="n">spherical</span><span class="p">:</span> <span class="nb">bool</span> <span class="o">=</span> <span class="kc">False</span><span class="p">,</span>
         <span class="n">num_iters</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">6</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Construct set of landmarks by recursively selecting new landmarks</span>
 <span class="sd">        that are maximally orthogonal to the existing set.</span>
 <span class="sd">        Returns near orthogonal landmarks with shape (B, M, D).</span>
@@ -390,7 +386,7 @@
         <span class="k">return</span> <span class="n">landmarks</span>  <span class="c1"># (B, M, D)</span>
 
     <span class="k">def</span> <span class="nf">_kmeans</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">,</span> <span class="n">K</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">num_iters</span><span class="p">:</span> <span class="nb">int</span> <span class="o">=</span> <span class="mi">10</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Arguments:</span>
 <span class="sd">            x: (B, N, D)</span>
 <span class="sd">            K: number of clusters</span>
@@ -429,7 +425,7 @@
         <span class="k">return</span> <span class="n">c</span>
 
     <span class="k">def</span> <span class="nf">_kmeans_spherical</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">x</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">,</span> <span class="n">K</span><span class="p">:</span> <span class="nb">int</span><span class="p">,</span> <span class="n">num_iters</span><span class="o">=</span><span class="mi">10</span><span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Arguments:</span>
 <span class="sd">            x: (B, N, D)</span>
 <span class="sd">        &quot;&quot;&quot;</span>
@@ -464,7 +460,7 @@
         <span class="k">return</span> <span class="n">c</span>
 
     <span class="k">def</span> <span class="nf">_compute_orthogonal_landmarks</span><span class="p">(</span><span class="bp">self</span><span class="p">,</span> <span class="n">q</span><span class="p">:</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">)</span> <span class="o">-&gt;</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Construct set of landmarks by recursively selecting new landmarks</span>
 <span class="sd">        that are maximally orthogonal to the existing set.</span>
 <span class="sd">        Returns near orthogonal landmarks with shape (B, M, D).</span>
@@ -548,7 +544,7 @@
         <span class="n">landmarks</span> <span class="o">=</span> <span class="n">torch</span><span class="o">.</span><span class="n">masked_select</span><span class="p">(</span><span class="n">q_samples</span><span class="p">,</span> <span class="n">selected_mask</span><span class="o">.</span><span class="n">bool</span><span class="p">())</span><span class="o">.</span><span class="n">reshape</span><span class="p">(</span>
             <span class="n">B</span><span class="p">,</span> <span class="o">-</span><span class="mi">1</span><span class="p">,</span> <span class="n">D</span>
         <span class="p">)</span>
-        <span class="k">return</span> <span class="n">landmarks</span>  <span class="c1">#  (B, M, D)</span></div>
+        <span class="k">return</span> <span class="n">landmarks</span>  <span class="c1"># (B, M, D)</span></div>
 </pre></div>
 
               </article>
