--- a/_modules/xformers/components/attention/random.html
+++ b/_modules/xformers/components/attention/random.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.attention.random | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.attention.random | xFormers 0.0.22 documentation</title>
   
   <script src="../../../../_static/js/ga.js"></script>
   <script src="../../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/attention/random.html" />
   
-  <meta property="og:title" content="xformers.components.attention.random | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.attention.random | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -140,10 +140,6 @@
 <p class="caption" role="heading"><span class="caption-text">Components Documentation</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../components/index.html">API Reference</a></li>
-</ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../../factory/index.html">Factory</a></li>
 </ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
@@ -275,7 +271,7 @@
         <span class="o">*</span><span class="n">args</span><span class="p">,</span>
         <span class="o">**</span><span class="n">kwargs</span><span class="p">,</span>
     <span class="p">):</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        &quot;Random&quot; attention, as proposed for instance in BigBird_.</span>
 <span class="sd">        Random means in that case that each query can attend to a random set of keys.</span>
 <span class="sd">        This implementation is sparse-aware, meaning that the empty attention parts will not be represented in memory.</span>
