--- a/_modules/xformers/components/multi_head_dispatch.html
+++ b/_modules/xformers/components/multi_head_dispatch.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.multi_head_dispatch | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.multi_head_dispatch | xFormers 0.0.22 documentation</title>
   
   <script src="../../../_static/js/ga.js"></script>
   <script src="../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/multi_head_dispatch.html" />
   
-  <meta property="og:title" content="xformers.components.multi_head_dispatch | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.multi_head_dispatch | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -140,10 +140,6 @@
 <p class="caption" role="heading"><span class="caption-text">Components Documentation</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../components/index.html">API Reference</a></li>
-</ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../factory/index.html">Factory</a></li>
 </ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
@@ -273,7 +269,7 @@
 
 
 <div class="viewcode-block" id="MultiHeadDispatch"><a class="viewcode-back" href="../../../components/mha.html#xformers.components.MultiHeadDispatch">[docs]</a><span class="k">class</span> <span class="nc">MultiHeadDispatch</span><span class="p">(</span><span class="n">nn</span><span class="o">.</span><span class="n">Module</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    A multi-head masked self-attention dispatch mechanism, with a projection at the end,</span>
 <span class="sd">    following the architecture proposed in `Attention is all you need`_, Vaswani et al.</span>
 
@@ -382,7 +378,7 @@
         <span class="n">att_mask</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
         <span class="n">key_padding_mask</span><span class="p">:</span> <span class="n">Optional</span><span class="p">[</span><span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">]</span> <span class="o">=</span> <span class="kc">None</span><span class="p">,</span>
     <span class="p">)</span> <span class="o">-&gt;</span> <span class="n">torch</span><span class="o">.</span><span class="n">Tensor</span><span class="p">:</span>
-        <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">        </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">        Expected input dimensions are [batch size, sequence length, embed dim]</span>
 <span class="sd">        Output dimensions are [batch size, sequence length, embed dim]</span>
 <span class="sd">        &quot;&quot;&quot;</span>
