--- a/_modules/xformers/components/positional_embedding/rotary.html
+++ b/_modules/xformers/components/positional_embedding/rotary.html
@@ -12,7 +12,7 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>xformers.components.positional_embedding.rotary | xFormers 0.0.15 documentation</title>
+  <title>xformers.components.positional_embedding.rotary | xFormers 0.0.22 documentation</title>
   
   <script src="../../../../_static/js/ga.js"></script>
   <script src="../../../../_static/js/redirect.js"></script>
@@ -22,7 +22,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformers_modules/xformers/components/positional_embedding/rotary.html" />
   
-  <meta property="og:title" content="xformers.components.positional_embedding.rotary | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="xformers.components.positional_embedding.rotary | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -141,10 +141,6 @@
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../components/index.html">API Reference</a></li>
 </ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../../../../factory/index.html">Factory</a></li>
-</ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../../../../tutorials/index.html">Tutorials</a></li>
@@ -256,7 +252,7 @@
 
 
 <div class="viewcode-block" id="RotaryEmbedding"><a class="viewcode-back" href="../../../../components/position_embedding.html#xformers.components.positional_embedding.RotaryEmbedding">[docs]</a><span class="k">class</span> <span class="nc">RotaryEmbedding</span><span class="p">(</span><span class="n">torch</span><span class="o">.</span><span class="n">nn</span><span class="o">.</span><span class="n">Module</span><span class="p">):</span>
-    <span class="sd">&quot;&quot;&quot;</span>
+<span class="w">    </span><span class="sd">&quot;&quot;&quot;</span>
 <span class="sd">    The rotary position embeddings from RoFormer_ (Su et. al).</span>
 <span class="sd">    A crucial insight from the method is that the query and keys are</span>
 <span class="sd">    transformed by rotation matrices which depend on the relative positions.</span>
