--- a/components/index.html
+++ b/components/index.html
@@ -13,7 +13,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   
-  <title>API Reference | xFormers 0.0.15 documentation</title>
+  <title>API Reference | xFormers 0.0.22 documentation</title>
   
   <script src="../_static/js/ga.js"></script>
   <script src="../_static/js/redirect.js"></script>
@@ -23,7 +23,7 @@
   
   <link rel="canonical" href="https://facebookresearch.github.io/xformerscomponents/index.html" />
   
-  <meta property="og:title" content="API Reference | xFormers 0.0.15 documentation">
+  <meta property="og:title" content="API Reference | xFormers 0.0.22 documentation">
   <meta name="description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <meta property="og:description" content="API docs for xFormers. xFormers is a PyTorch extension library for composable and optimized Transformer blocks.">
   <!--<meta property="og:image" content="https://mmf.sh/img/logo.png">-->
@@ -43,7 +43,7 @@
   <link rel="stylesheet" href="../_static/css/customize.css" type="text/css" />
   <link rel="index" title="Index" href="../genindex.html" />
   <link rel="search" title="Search" href="../search.html" />
-  <link rel="next" title="Operators" href="ops.html" />
+  <link rel="next" title="xFormers optimized operators" href="ops.html" />
   <link rel="prev" title="What is xFormers?" href="../what_is_xformers.html" /> 
 
   
@@ -144,10 +144,6 @@
 <ul class="current">
 <li class="toctree-l1 current"><a class="current reference internal" href="#">API Reference</a></li>
 </ul>
-<p class="caption" role="heading"><span class="caption-text">Build models and blocks programatically</span></p>
-<ul>
-<li class="toctree-l1"><a class="reference internal" href="../factory/index.html">Factory</a></li>
-</ul>
 <p class="caption" role="heading"><span class="caption-text">Tutorials and examples</span></p>
 <ul>
 <li class="toctree-l1"><a class="reference internal" href="../tutorials/index.html">Tutorials</a></li>
@@ -231,7 +227,10 @@
 <h1>API Reference<a class="headerlink" href="#api-reference" title="Permalink to this heading">¶</a></h1>
 <div class="toctree-wrapper compound">
 <ul>
-<li class="toctree-l1"><a class="reference internal" href="ops.html">Operators</a></li>
+<li class="toctree-l1"><a class="reference internal" href="ops.html">xFormers optimized operators</a><ul>
+<li class="toctree-l2"><a class="reference internal" href="ops.html#module-xformers.ops">Memory-efficient attention</a></li>
+</ul>
+</li>
 <li class="toctree-l1"><a class="reference internal" href="attentions.html">Attention mechanisms</a></li>
 <li class="toctree-l1"><a class="reference internal" href="feedforward.html">Feedforward mechanisms</a></li>
 <li class="toctree-l1"><a class="reference internal" href="position_embedding.html">Position Embeddings</a></li>
@@ -249,7 +248,7 @@
   
     <div class="rst-footer-buttons" role="navigation" aria-label="footer navigation">
       
-        <a href="ops.html" class="btn btn-neutral float-right" title="Operators" accesskey="n" rel="next">Next <img src="../_static/images/chevron-right-orange.svg" class="next-page"></a>
+        <a href="ops.html" class="btn btn-neutral float-right" title="xFormers optimized operators" accesskey="n" rel="next">Next <img src="../_static/images/chevron-right-orange.svg" class="next-page"></a>
       
       
         <a href="../what_is_xformers.html" class="btn btn-neutral" title="What is xFormers?" accesskey="p" rel="prev"><img src="../_static/images/chevron-right-orange.svg" class="previous-page"> Previous</a>
